# snowflake-connector-nodejs

./: .env  .eslintrc.js  .gitignore  .mocharc.js  .npmignore  .oxlintrc.json  .pre-commit-config.yaml  .prettierrc.js  .travis.yml  .whitesource  BUILD-2  BUILD-temp  CHANGELOG.md  EnableConnectAsyncTests.py  Jenkinsfile  QueryContexttesting.js  README.md  README.rd  README.rst  SDK_RESPONSE_TO_COCO.md  SDK_SNAKE_CASE_SPEC.md  WORKSPACE.bazel  bazel-bin  bazel-nodeJs2  bazel-out  bazel-testlogs  binding.gyp  bindings.cc  dummy.json  gulpfile.js  index.d.ts  index.js  linfix.js  package-lock.json  package.json  parameters.json.enc  parameters_az.json.enc  parameters_gcp.json.enc  snowflake-sdk.d.ts  test.ts  (+12 more)
.github/: CODEOWNERS  ISSUE_TEMPLATE.txt  PULL_REQUEST_TEMPLATE.md  repo_meta.yaml
.ijwb/: .bazelproject
ci/: _init.sh  build.sh  build_minicore.js  build_typescript.js  set_git_info.sh  setup_gpg_home.sh  test.sh  test_authentication.sh  test_bun.sh  test_linux.sh  test_linux_mac.sh  test_mac.sh  test_revocation.sh  test_rhel9_docker.sh  test_ubuntu.sh  test_wif.sh  test_windows.bat  typescript-test.ts
docker/: _init.sh  build.sh  test.sh
lib/: __dummyJsFile.js  __dummyTsFile.ts  browser.js  core.d.ts  core.js  disk_cache.ts  error_code.ts  errors.d.ts  errors.js  file_util.js  filesystem.d.ts  filesystem.js  filesystem_access.d.ts  filesystem_access.js  generic.js  global_config.d.ts  global_config.js  global_config_typed.ts  logger.js  logger.ts  parameters.js  proxy_util.js  queryContextCache.js  queryContextElement.js  queryContextEntryDTO.js  request_util_test.js  secret_detector.js  snowflake.d.ts  snowflake.js  snowflake.ts  streamlit_embed.js  url_util.js  util.d.ts  util.js  util.ts
libsfclient/: .gitignore  README.rst
samples/: README.md  helpers.js  jsonParserComparison.js  package.json  rowsVsStreamingQuery.js  test.js
scripts/: create_schema.py  drop_schema.py  env.sh  format_code.sh  hang_webserver.py  install.sh  install_github_workflow.sh  run_test.sh  run_travis.sh  sf_test_utils.py  wss.sh
system_test/: README.md  connectionOptions.js  testLongQuery.js  testProxy.js  testSnowflakeSupportWhs.js  testSystemGetObjects.js  testSystemSetWhSnowflakeSupportFlag.js  testToken.js  testTrivial.js
test/: .gitignore  REFACTOR.md  auth-workload-identity-e2e.ts  configureLogger.js  connections.toml  dummy_test.ts  dummy_test2.js  globalSetup.ts  hangWebserver.js  mock_http_client.js  parameters.json  (+3 more)
(+600 files in other folders)
